--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@tanstack/react-query": "^5.81.5",
     "@timing71/common": "^0.6.0",
     "@timing71/services": "^0.13.0",
     "expo": "53.0.12",
